<resources>
    <string name="app_description">
Powerful service organizer for Jehovah\'s Witnesses. Keep records, track statistics and service time,
conveniently view and arrange territories and interested persons in an automated and intuitive way.

Features:
 * Conveniently keeping records in service.
 * Flexible display modes equally fitting for private houses and condominiums.
 * Viewing territories by screens, households, tenants, visits.
 * Saving date and time of all visits.
 * Tracking of service time in the chronometer mode.
 * Custom colors for households in automatic or manual mode.
 * Tracking of placed literature, return visits, Bible studies.
 * Detailed tracking of all service sessions with all relevant statistics.
 * Composing total monthly reports and sending via e-mail or SMS.
 * Manual and automatic data backups.
 * Saving data to Dropbox and syncing across connected devices.
 * Absolutely free app, no ads. You can make an in-app donation payment to support the development, if you wish.

Leave feedback or ask questions on Google+ Community: https://plus.google.com/communities/112371364498094492171

Open source project: https://github.com/jwdroid/jwdroid

Tags: JW, Jehovah\'s Witnesses, preaching, ministry, organizer, notes
**add the same translated tags here**
    </string>
    <string name="app_name" translatable="false">Ministry Pad</string>
    <string name="lbl_territory_name">Territory name:</string>
    <string name="title_territory_add">Add territory</string>
    <string name="lbl_territory_desc">Short description:</string>
    <string name="err_empty_name">Enter the name!</string>
    <string name="msg_territory_added">Territory added</string>
    <string name="msg_territory_deleted">Territory removed</string>
    <string name="territory_list_empty">Territory list is empty. You may add a new territory by the button above.</string>
    <string name="dlg_territory_delete_msg">Territory deletion cannot be undone. Are you sure?</string>
    <string name="dlg_territory_delete_title">Delete territory</string>
    <string name="dlg_territory_add_label">Territory name:</string>
    <string name="dlg_territory_add_note">For example, street name</string>
    <string name="btn_add">Add</string>
    <string name="btn_ok">OK</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_cancel">Cancel</string>
    <string name="lbl_magazines">Magazines:</string>
    <string name="lbl_brochures">Brochures:</string>
    <string name="lbl_books">Books:</string>
    <string name="lbl_returns">Return visits:</string>
    <string name="lbl_hours">Hours:</string>
    <string name="lbl_studies">B. studies:</string>
    <string name="title_chrono">Chronometer</string>
    <string name="lbl_chrono_started_time">Started at %s</string>
    <string name="lbl_chrono_stopped">Chronometer is stopped</string>
    <string name="btn_chrono_pause">Pause</string>
    <string name="btn_chrono_resume">Resume</string>
    <string name="btn_chrono_finish">Finish</string>
    <string name="btn_chrono_start">Start</string>
    <string name="msg_chrono_finish">End service?</string>
    <string name="msg_chrono_start">Start service?</string>
    <string name="msg_chrono_service_started">Service chronometer started</string>
    <string name="lbl_chrono_current_time">Service time:</string>
    <string name="lbl_chrono_service_note">Select to go to chronometer</string>
    <string name="action_add_single_object">Add one</string>
    <string name="action_add_many_objects">Add some</string>
    <string name="dlg_add_single_object_note">For example, apartment or house number</string>
    <string name="msg_object_name">Enter heading:</string>
    <string name="lbl_set_row">Row:</string>
    <string name="lbl_set_col">Column:</string>
    <string name="lbl_numbers_from">Numbers from:</string>
    <string name="lbl_numbers_to">to:</string>
    <string name="msg_arrange_after_add">Households added. For your convenience (for example, if you add a condominium entrance) you may arrange the grid by rows and columns in the \&quot;Arrange\&quot; menu. Would you like to do it now?</string>
    <string name="msg_error">Error!</string>
    <string name="msg_object_deleted">Household deleted</string>
    <string name="err_invalid_input">Invalid input!</string>
    <string name="err_no_cols_value">Enter number of columns!</string>
    <string name="action_object_change_name">Heading</string>
    <string name="action_object_change_color">Color</string>
    <string name="action_object_move_up">Up</string>
    <string name="action_object_move_down">Down</string>
    <string name="action_object_delete">Delete</string>
    <string name="action_object_move">Move</string>
    <string name="lbl_from">From:</string>
    <string name="lbl_to">To:</string>
    <string name="lbl_rows">Rows:</string>
    <string name="lbl_cols">Columns:</string>
    <string name="li_top_down">Top-down</string>
    <string name="li_bottom_up">Bottom-up</string>
    <string name="li_left_right">Left to right</string>
    <string name="li_right_left">Right to left</string>
    <string name="lbl_one_color">  Solid color</string>
    <string name="lbl_two_colors">  Two colors</string>
    <string name="lbl_door_empty">Create a new tenant here.\n\nAdd a new visit by the button above.</string>
    <string name="lbl_group_empty">This screen is empty.\n\nAdd new households by the button above.</string>
    <string name="title_help">Help</string>
    <string name="title_territory_list">Territories</string>
    <string name="title_people">People</string>
    <string name="title_reports">Reports</string>
    <string name="lbl_people_list_empty">People list is empty. \n\nAdd new person by the button above or in the \&quot;Territories\&quot; section.</string>
    <string name="lbl_person_add_from_people">Note that this person will be added without connection to any territory.</string>
    <string name="title_report">Report for %s</string>
    <string name="action_calc_type_sessions">By service list</string>
    <string name="action_calc_type_visits">By visits</string>
    <string name="lbl_report_no_data">No data</string>
    <string name="msg_delete_session">Do you really want to delete this service?</string>
    <string name="msg_session_deleted">Service deleted</string>
    <string name="action_session_delete">Delete</string>
    <string name="title_session">Service %s</string>
    <string name="lbl_report_list_empty">Reports list is empty.</string>
    <string name="lbl_report_summary">Total</string>
    <string name="lbl_report_empty">Report empty.</string>
    <string name="lbl_session_desc">Service description:</string>
    <string name="lbl_territory_notes">Notes</string>
    <string name="lbl_territory_got">Territory taken:</string>
    <string name="lbl_territory_finished">Territory worked:</string>
    <string name="lbl_territory_last_visit">Last visit:</string>
    <string name="action_territory_change_name">Name</string>
    <string name="action_territory_info">Info</string>
    <string name="action_territory_delete">Delete</string>
    <string name="lbl_visit_type">Visit:</string>
    <string-array name="visit_types">
        <item>N/A</item>
        <item>Normal visit</item>
        <item>Return visit</item>
        <item>Bible study</item>
    </string-array>
    <string name="lbl_visit_date">Date:</string>
    <string name="chk_visit_calc_auto">Take from text</string>
    <string name="msg_choose_color">Choose color:</string>
    <string name="msg_person_desc">Enter tenant description:</string>
    <string name="msg_delete_visit">Are you sure you want to delete this visit?</string>
    <string name="msg_delete_person">Do you really want to delete this tenant and all associated visits?</string>
    <string name="msg_person_deleted">Tenant deleted</string>
    <string name="msg_visit_deleted">Visit deleted</string>
    <string name="title_visit">Visit</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_help">Help</string>
    <string name="menu_territory_info">Info</string>
    <string name="menu_territory_layout">Layout</string>
    <string name="menu_territory_arrange">Arrange</string>
    <string name="menu_territory_shift_up">Move all up</string>
    <string name="menu_territory_shift_down">Move all down</string>
    <string name="menu_territory_shift_left">Move all left</string>
    <string name="menu_territory_shift_right">Move all right</string>
    <string name="pref_title_appearance">Appearance</string>
    <string name="pref_list_text_rows">Rows number</string>
    <string name="pref_list_text_rows_note">Number of rows of the last note of the household to display in list view</string>
    <string name="pref_table_button_size">Button size</string>
    <string name="pref_table_button_size_note">Size of buttons representing households in grid view</string>
    <string name="pref_title_colors">Colors</string>
    <string name="pref_autocolor">Auto-set colors</string>
    <string name="pref_autocolor_note">Automatically set color against certain conditions</string>
    <string name="pref_assign_colors">Set colors</string>
    <string name="pref_color_reject">Not interested</string>
    <string name="pref_color_visit">Visit</string>
    <string name="pref_color_return">Return visit</string>
    <string name="pref_color_study">Bible study</string>
    <string name="lbl_person_desc">Tenant description</string>
    <string name="lbl_male">Man</string>
    <string name="lbl_female">Woman</string>
    <string name="pref_hide_visited">Hide visited today</string>
    <string name="pref_hide_visited_note">Hide households visited today (marked with checkbox)</string>
    <string name="menu_territory_sort">Sort</string>
    <string name="pref_object_add_sorted">Auto sort</string>
    <string name="pref_object_add_sorted_note">Insert a new household with sorting by name (only for list view)</string>
    <string name="menu_backups">Backups</string>
    <string name="pref_autobackup">Auto backup</string>
    <string name="pref_autobackup_note">Automatically create a new backup after each service session</string>
    <string name="pref_num_backups">Copies number</string>
    <string name="pref_num_backups_note">Max number of stored backups</string>
    <string name="title_drive">Backup to Dropbox</string>
    <string name="pref_dropbox_off">Disconnect from Dropbox</string>
    <string name="pref_dropbox_off_note">Log out from Dropbox account and stop syncing</string>
    <string name="lbl_contribute">We are glad that you find Ministry Pad useful! The app was written in 2010, and now we work on an updated, modern version with new features. You could speed up the development by contributing to the project. Thank you!</string>
    <string name="btn_donate">Donate to support development</string>
    <string name="btn_review">Review on Google Play</string>
    <string name="btn_translate">Help with translation</string>
    <string name="btn_rename">Rename</string>
    <string name="title_contribute">Contribute</string>
    <string name="lbl_donation">Donation:</string>
    <string name="lbl_recurring">Recurring:</string>
    <string name="lbl_payments_processed_by">Payments are processed by Google Play.</string>
    <string name="menu_community">Google+ Community</string>
    <string name="menu_about_app">About</string>
    <string name="lbl_copyright" translatable="false">&#169; 2016 Artem Chivchalov</string>
    <string name="lbl_thanks" translatable="false">Special thanks to:</string>
    <string name="lbl_license" translatable="false">The MIT License</string>
    <string name="lbl_github_url" translatable="false" formatted="true"><a href="https://github.com/jwdroid/jwdroid">https://github.com/jwdroid/jwdroid</a></string>
    <string name="action_save_data">Save all data</string>
    <string name="action_restore_data">Restore all data</string>
</resources>