<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_cloud_upload_white_48dp"
        android:title="@string/menu_backups"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_backup"
                android:title="@string/action_save_data"/>
            <item
                android:id="@+id/menu_restore"
                android:title="@string/action_restore_data"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_preferences"
        android:icon="@drawable/ic_settings_white_48dp"
        android:title="@string/menu_preferences"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_help_white_48dp"
        android:title="@string/menu_help"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_contribute"
        android:icon="@drawable/ic_thumb_up_white_48dp"
        android:title="@string/title_contribute"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_community"
        android:title="@string/menu_community"/>
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about_app"/>
</menu>
