<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#eee">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="?attr/actionBarTheme"
        app:title="@string/title_contribute" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@color/white"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:textSize="17dp"
                android:text="@string/lbl_contribute" />


            <Button
                android:id="@+id/btn_donate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?attr/borderlessButtonStyle"
                android:textColor="@color/accent"
                android:gravity="left|center_vertical"
                android:text="@string/btn_donate"/>


            <Button
                android:id="@+id/btn_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?attr/borderlessButtonStyle"
                android:textColor="@color/accent"
                android:text="@string/btn_review"
                android:gravity="left|center_vertical"/>


            <Button
                android:id="@+id/btn_translate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?attr/borderlessButtonStyle"
                android:textColor="@color/accent"
                android:text="@string/btn_translate"
                android:gravity="left|center_vertical"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
